...

    var id: String { rawValue }
    var title: String {
        switch self {
        case .gray: "Gray"
        case .dark: "Dark"
        case .light: "Light"
        }
    }

    var symbol: String {
        switch self {
        case .gray: "circle.lefthalf.filled"
...
